<?xml version="1.0" encoding="utf-8"?>
<!-- TODO Ejercicios 2.2 -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/session"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_d"
        android:text="@string/log"

        android:textColor="@color/darkness"
        android:textSize="@dimen/title"
        app:layout_constraintLeft_toLeftOf="parent"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:layout_width="@dimen/I_size"
        android:layout_height="@dimen/I_size"


        android:layout_marginEnd="@dimen/x_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/top_d"

        android:src="@drawable/ic_close"
    />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/box"
        android:layout_width="@dimen/width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_d"

        app:boxBackgroundColor="@color/B_color"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/session">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/user_or_email"
            android:textColor="@color/darkness"
            android:textColorHint="@color/hint"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/box2"
        android:layout_width="@dimen/width"
        android:layout_height="wrap_content"

        android:layout_marginTop="@dimen/between"
        app:boxBackgroundColor="@color/B_color"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        app:layout_constraintTop_toBottomOf="@id/box">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColor="@color/darkness"
            android:textColorHint="@color/hint"
            android:textSize="@dimen/t_box" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/enter"
        android:layout_width="@dimen/width"
        android:layout_height="wrap_content"

        android:layout_marginTop="@dimen/top_d"

        android:background="@drawable/gradient"
        android:text="@string/enter"

        android:textColor="@color/black"
        android:textSize="@dimen/buton_letter"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/box2" />


    <TextView
        android:id="@+id/forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/between"

        android:text="@string/i_forgot_my_password"
        android:textColor="@color/darkness"
        android:textSize="@dimen/L_text"
        app:layout_constraintLeft_toLeftOf="parent"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enter" />

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/between"
        android:text="@string/do_you_not_have_an_account_sing_up"
        android:textColor="@color/darkness"
        android:textSize="@dimen/L_text"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@drawable/gradient3"
        app:layout_constraintTop_toBottomOf="@id/register"
        app:layout_constraintStart_toStartOf="@id/register"
        app:layout_constraintEnd_toEndOf="@id/register"/>

</androidx.constraintlayout.widget.ConstraintLayout>